--- a/Database_Creation_2015_2022.ipynb
+++ b/Database_Creation_2015_2022.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNT1lYipnaGvY2Hmey2a6aM",
+      "authorship_tag": "ABX9TyMG62Qse1W+pB4UQtAjmR+z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,12 +40,13 @@
     {
       "cell_type": "code",
       "source": [
-        "# 2015 - 2022 season injured player list\n",
+        "# 2015 - 2021 season injured player list\n",
         "\n",
         "import requests\n",
         "from bs4 import BeautifulSoup\n",
         "\n",
-        "years = [2015, 2016, 2017, 2018, 2019, 2020, 2021, 2022]\n",
+        "#years = [2015, 2016, 2017, 2018, 2019, 2020, 2021, 2022]\n",
+        "years = [2016, 2017, 2018, 2019, 2020, 2021, 2022]\n",
         "player_lists = []\n",
         "player_dic_list = []\n",
         "player_url = []\n",
@@ -78,7 +79,7 @@
         "import pandas as pd\n",
         "import numpy as np\n",
         "\n",
-        "pitch_data_2022 = pitching_stats_range('2022-04-01', '2022-10-30')\n",
+        "#pitch_data_2022 = pitching_stats_range('2022-04-01', '2022-10-30')\n",
         "pitch_data_2021 = pitching_stats_range('2021-04-01', '2021-10-30')\n",
         "pitch_data_2020 = pitching_stats_range('2020-04-01', '2020-10-30')\n",
         "pitch_data_2019 = pitching_stats_range('2019-04-01', '2019-10-30')\n",
@@ -99,7 +100,8 @@
         "# player injury history\n",
         "\n",
         "histories = []\n",
-        "pitch_data_list = [pitch_data_2015, pitch_data_2016, pitch_data_2017, pitch_data_2018, pitch_data_2019, pitch_data_2020, pitch_data_2021, pitch_data_2022]\n",
+        "#pitch_data_list = [pitch_data_2015, pitch_data_2016, pitch_data_2017, pitch_data_2018, pitch_data_2019, pitch_data_2020, pitch_data_2021, pitch_data_2022]\n",
+        "pitch_data_list = [pitch_data_2015, pitch_data_2016, pitch_data_2017, pitch_data_2018, pitch_data_2019, pitch_data_2020, pitch_data_2021]\n",
         "for pitch_data, player_list in zip(pitch_data_list, player_lists):\n",
         "  all_pitcher_name_list = pitch_data['Name'].values.tolist()\n",
         "  all_pitcher_team_list = pitch_data['Tm'].values.tolist()\n",
@@ -162,7 +164,8 @@
       "source": [
         "# database creation\n",
         "\n",
-        "\n",
+        "pitch_data_list = [pitch_data_2015, pitch_data_2016, pitch_data_2017, pitch_data_2018, pitch_data_2019, pitch_data_2020, pitch_data_2021]\n",
+        "count = 0\n",
         "year = 2014\n",
         "for pitch_data, player_list in zip(pitch_data_list, player_lists):\n",
         "  year += 1\n",
