--- a/Wrapper_Method.ipynb
+++ b/Wrapper_Method.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNivR4vf4MYE+oZYUPyqfbo",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyNivR4vf4MYE+oZYUPyqfbo"
     },
     "kernelspec": {
       "name": "python3",
@@ -17,18 +16,8 @@
   },
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/kenv0317/Injury-Prediction/blob/main/Wrapper_Method.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "FtHWqjmDAj8c"
       },
