--- a/Database_Creation_2015_2022.ipynb
+++ b/Database_Creation_2015_2022.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMG62Qse1W+pB4UQtAjmR+z",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyMG62Qse1W+pB4UQtAjmR+z"
     },
     "kernelspec": {
       "name": "python3",
@@ -16,16 +15,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/kenv0317/Injury-Prediction/blob/main/Database_Creation_2015_2022.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "execution_count": null,
